<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#201E25"
    android:id="@+id/reg_view"
    android:orientation="vertical"
    tools:context=".registration_and_authorization.view.Registration">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="160dp"
        android:text="@string/registration"
        android:textColor="#9B9B9B"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/user_login"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/login2"
        android:inputType="text"
        android:textColor="#fdfdfd"
        android:textColorHint="#6a6a6a"
        app:layout_constraintEnd_toEndOf="@+id/appCompatTextView2"
        app:layout_constraintStart_toStartOf="@+id/appCompatTextView2"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView2" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/user_pass"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/password2"
        android:inputType="textPassword"
        android:textColor="#fdfdfd"
        android:textColorHint="#6a6a6a"
        app:layout_constraintEnd_toEndOf="@+id/user_login"
        app:layout_constraintStart_toStartOf="@+id/user_login"
        app:layout_constraintTop_toBottomOf="@+id/user_login" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/user_pass_confirm"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        android:textColor="#fdfdfd"
        android:textColorHint="#6a6a6a"
        app:layout_constraintEnd_toEndOf="@+id/user_pass"
        app:layout_constraintStart_toStartOf="@+id/user_pass"
        app:layout_constraintTop_toBottomOf="@+id/user_pass" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_reg"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:backgroundTint="#322F37"
        android:text="@string/create"
        android:textColor="#9B9B9B"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/user_pass_confirm"
        app:layout_constraintStart_toStartOf="@+id/user_pass_confirm"
        app:layout_constraintTop_toBottomOf="@+id/user_pass_confirm" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/button_go_auth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/authorization"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/button_reg"
        app:layout_constraintStart_toStartOf="@+id/button_reg"
        app:layout_constraintTop_toBottomOf="@+id/button_reg" />

</androidx.constraintlayout.widget.ConstraintLayout>