<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.helloworld4.view_model.RegistrationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/reg_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#201E25"
        android:orientation="vertical"
        tools:context=".view.users.RegistrationFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/size_160dp"
            android:text="@string/registration"
            android:textColor="#9B9B9B"
            android:textSize="@dimen/size_30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/user_login"
            android:layout_width="@dimen/size_300dp"
            android:layout_height="@dimen/size_60dp"
            android:layout_marginTop="@dimen/size_30dp"
            android:ems="10"
            android:hint="@string/login2"
            android:inputType="text"
            android:textColor="#fdfdfd"
            android:textColorHint="#6a6a6a"
            app:layout_constraintEnd_toEndOf="@+id/appCompatTextView2"
            app:layout_constraintStart_toStartOf="@+id/appCompatTextView2"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView2" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/user_pass"
            android:layout_width="@dimen/size_300dp"
            android:layout_height="@dimen/size_60dp"
            android:layout_marginTop="@dimen/size_20dp"
            android:ems="10"
            android:hint="@string/password2"
            android:inputType="textPassword"
            android:textColor="#fdfdfd"
            android:textColorHint="#6a6a6a"
            app:layout_constraintEnd_toEndOf="@+id/user_login"
            app:layout_constraintStart_toStartOf="@+id/user_login"
            app:layout_constraintTop_toBottomOf="@+id/user_login" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/user_pass_confirm"
            android:layout_width="@dimen/size_300dp"
            android:layout_height="@dimen/size_60dp"
            android:layout_marginTop="@dimen/size_20dp"
            android:ems="10"
            android:hint="@string/repeat_password"
            android:inputType="textPassword"
            android:textColor="#fdfdfd"
            android:textColorHint="#6a6a6a"
            app:layout_constraintEnd_toEndOf="@+id/user_pass"
            app:layout_constraintStart_toStartOf="@+id/user_pass"
            app:layout_constraintTop_toBottomOf="@+id/user_pass" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_reg"
            android:layout_width="@dimen/size_190dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_15dp"
            android:backgroundTint="#322F37"
            android:text="@string/create"
            android:textColor="#9B9B9B"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/user_pass_confirm"
            app:layout_constraintStart_toStartOf="@+id/user_pass_confirm"
            app:layout_constraintTop_toBottomOf="@+id/user_pass_confirm" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

