<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#201E25"
    android:orientation="vertical"
    tools:context=".Lesson16.RegAuth.Authorization">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/button_back"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="35dp"
        android:src="@drawable/arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="175dp"
        android:text="@string/authorization"
        android:textColor="@color/material_dynamic_neutral70"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/login_auth"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/login"
        android:inputType="text"
        android:textColor="#fdfdfd"
        android:textColorHint="#6a6a6a"
        app:layout_constraintEnd_toEndOf="@+id/appCompatTextView"
        app:layout_constraintStart_toStartOf="@+id/appCompatTextView"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/pass_auth"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#fdfdfd"
        android:textColorHint="#6a6a6a"
        app:layout_constraintEnd_toEndOf="@+id/login_auth"
        app:layout_constraintStart_toStartOf="@+id/login_auth"
        app:layout_constraintTop_toBottomOf="@+id/login_auth" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_auth"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:backgroundTint="#322F37"
        android:text="@string/login"
        android:textColor="@color/material_dynamic_neutral70"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/pass_auth"
        app:layout_constraintStart_toStartOf="@+id/pass_auth"
        app:layout_constraintTop_toBottomOf="@+id/pass_auth" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/button_go_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/registration"
        android:textColor="@color/material_dynamic_neutral70"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/button_auth"
        app:layout_constraintStart_toStartOf="@+id/button_auth"
        app:layout_constraintTop_toBottomOf="@+id/button_auth" />

</androidx.constraintlayout.widget.ConstraintLayout>