<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.example.helloworld4.view_model.AuthorizationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#201E25"
        android:orientation="vertical"
        tools:context=".view.users.AuthorizationFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_175dp"
            android:text="@string/authorization"
            android:textColor="#9B9B9B"
            android:textSize="@dimen/size_30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/login_auth"
            android:layout_width="@dimen/size_300dp"
            android:layout_height="@dimen/size_60dp"
            android:layout_marginTop="@dimen/size_30dp"
            android:ems="10"
            android:hint="@string/login"
            android:inputType="text"
            android:textColor="#fdfdfd"
            android:textColorHint="#6a6a6a"
            app:layout_constraintEnd_toEndOf="@+id/appCompatTextView"
            app:layout_constraintStart_toStartOf="@+id/appCompatTextView"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/pass_auth"
            android:layout_width="@dimen/size_300dp"
            android:layout_height="@dimen/size_60dp"
            android:layout_marginTop="@dimen/size_20dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="#fdfdfd"
            android:textColorHint="#6a6a6a"
            app:layout_constraintEnd_toEndOf="@+id/login_auth"
            app:layout_constraintStart_toStartOf="@+id/login_auth"
            app:layout_constraintTop_toBottomOf="@+id/login_auth" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_auth"
            android:layout_width="@dimen/size_150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_15dp"
            android:backgroundTint="#322F37"
            android:enabled="true"
            android:text="@string/login"
            android:textColor="#9B9B9B"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/pass_auth"
            app:layout_constraintStart_toStartOf="@+id/pass_auth"
            app:layout_constraintTop_toBottomOf="@+id/pass_auth" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/button_go_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_100dp"
            android:text="@string/registration"
            android:textColor="@color/white"
            android:textSize="@dimen/size_18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/button_auth"
            app:layout_constraintStart_toStartOf="@+id/button_auth"
            app:layout_constraintTop_toBottomOf="@+id/button_auth" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

